updating layout for example page to fix window resize. [Fixes #6]

--- a/less/main.less
+++ b/less/main.less
@@ -17,6 +17,19 @@
         padding: 20px 0 0;
     }
 
+    .wrapper {
+        overflow: hidden;
+    }
+
+    header {
+        background: transparent;
+    }
+
+    section {
+        background: transparent;
+        margin: 0 0 0 350px;
+    }
+
     .intro {
         height: 120px;
 
@@ -64,7 +77,6 @@
             line-height: 20px;
         }
     }
-
 
     .first_ftw,
     .second_ftw {
@@ -124,7 +136,7 @@
     .more_here {
         &:before {
             background-position: -86px 0 ;
-            .transform(90deg, 1, 0deg, 0);
+            .transform(90deg, 1, 0, 0, 0);
             right: 180px;
             top: 84px;
             width: 130px;
