fixing broken image reference

--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -91,7 +91,7 @@
             .pg-transition-animation(all, 0.2s, ease-in);
 
             &:before {
-                .pg-icon-replacement("/img/tlyguide/tlyguide_icon.png", 16px, 16px, 0 0);
+                .pg-icon-replacement("../img/tlyguide/tlyguide_icon.png", 16px, 16px, 0 0);
                 content: " ";
                 left: 25px;
                 position: absolute;
@@ -335,7 +335,7 @@
 
             .tlypageguide_back,
             .tlypageguide_fwd {
-                .pg-icon-replacement ("/img/tlyguide/tlyguide_arrow.png", 30px, 30px, 10px 4px);
+                .pg-icon-replacement ("../img/tlyguide/tlyguide_arrow.png", 30px, 30px, 10px 4px);
                 position: absolute;
                 top: 34px;
                 left: 10px;
