--- a/css/pageguide.css
+++ b/css/pageguide.css
@@ -299,11 +299,11 @@
   left: 10px;
 }
 #tlyPageGuideWrapper #tlyPageGuideMessages .tlypageguide_back {
-  -webkit-transform: rotate(-180deg) scale(1) skew(0) translate(0);
-  -moz-transform: rotate(-180deg) scale(1) skew(0) translate(0);
-  -o-transform: rotate(-180deg) scale(1) skew(0) translate(0);
-  -ms-transform: rotate(-180deg) scale(1) skew(0) translate(0);
-  transform: rotate(-180deg) scale(1) skew(0) translate(0);
+  -webkit-transform: rotate(-180deg) scale(1) skewX(0deg) skewY(0deg) translate(0px);
+  -moz-transform: rotate(-180deg) scale(1) skewX(0deg) skewY(0deg) translate(0px);
+  -o-transform: rotate(-180deg) scale(1) skewX(0deg) skewY(0deg) translate(0px);
+  -ms-transform: rotate(-180deg) scale(1) skewX(0deg) skewY(0deg) translate(0px);
+  transform: rotate(-180deg) scale(1) skewX(0deg) skewY(0deg) translate(0px);
 }
 #tlyPageGuideWrapper #tlyPageGuideMessages .tlypageguide_fwd {
   left: 90px;
