--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -44,12 +44,12 @@
         opacity:@op/100;
     }
 
-    .pg-transform (@rotate: 90deg, @scale: 1, @skew: 1deg, @translate: 10px) {
-        -webkit-transform: rotate(@rotate) scale(@scale) skew(@skew) translate(@translate);
-        -moz-transform: rotate(@rotate) scale(@scale) skew(@skew) translate(@translate);
-        -o-transform: rotate(@rotate) scale(@scale) skew(@skew) translate(@translate);
-        -ms-transform: rotate(@rotate) scale(@scale) skew(@skew) translate(@translate);
-        transform: rotate(@rotate) scale(@scale) skew(@skew) translate(@translate);
+    .pg-transform (@rotate: 0deg, @scale: 1, @skewX: 0deg, @skewY: 0deg, @translate: 0px) {
+        -webkit-transform: rotate(@rotate) scale(@scale) skewX(@skewX) skewY(@skewY) translate(@translate);
+        -moz-transform: rotate(@rotate) scale(@scale) skewX(@skewX) skewY(@skewY) translate(@translate);
+        -o-transform: rotate(@rotate) scale(@scale) skewX(@skewX) skewY(@skewY) translate(@translate);
+        -ms-transform: rotate(@rotate) scale(@scale) skewX(@skewX) skewY(@skewY) translate(@translate);
+        transform: rotate(@rotate) scale(@scale) skewX(@skewX) skewY(@skewY) translate(@translate);
     }
 
     .pg-border-box (){
@@ -344,7 +344,7 @@
             }
 
             .tlypageguide_back {
-                .pg-transform(-180deg, 1, 0, 0);
+                .pg-transform(-180deg, 1, 0, 0, 0);
             }
 
             .tlypageguide_fwd {
