If the height of the content of the guide has more height that 100px the end of it is not visible

--- a/css/pageguide.css
+++ b/css/pageguide.css
@@ -236,6 +236,7 @@
   position: fixed;
   width: 90%;
   z-index: 1000;
+  overflow-y: auto;
 }
 #tlyPageGuideWrapper #tlyPageGuideMessages span {
   background: rgba(247, 0, 119, 0.95);
