I forgot to commit the less file

--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -286,7 +286,7 @@
             position: fixed;
             width: 90%;
             z-index: 1000;
-
+            overflow-y: auto;
             span {
                 background: fade(@pg-highlight-color, 95%);
                 .pg-rounded-corners(3px);
