--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -391,3 +391,25 @@
             display: block;
         }
     }
+
+    #tlyPageGuideWelcome {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 9999;
+        width: 95%;
+        margin: auto;
+        max-width: 600px;
+        height: 500px;
+        min-height: 500px;
+        background: #fff;
+        .pg-rounded-corners(10px);
+        .pg-box-shadow(0, 0, 10px, 2px, rgba(0, 0, 0, 0.2));
+
+        &.open {
+            display: block;
+        }
+    }
