--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -392,7 +392,7 @@
         }
     }
 
-    #tlyPageGuideWelcome {
+    .tlypageguide_welcome {
         display: none;
         position: absolute;
         top: 0;
@@ -406,6 +406,8 @@
         height: 500px;
         min-height: 500px;
         background: #fff;
+        padding: 15px 20px;
+        overflow-y: scroll;
         .pg-rounded-corners(10px);
         .pg-box-shadow(0, 0, 10px, 2px, rgba(0, 0, 0, 0.2));
 
