--- a/css/pageguide.css
+++ b/css/pageguide.css
@@ -349,7 +349,10 @@
   display: block;
 }
 .tlypageguide_welcome {
-  display: none;
+  filter: alpha(opacity=0);
+  -moz-opacity: 0;
+  -khtml-opacity: 0;
+  opacity: 0;
   position: absolute;
   top: 0;
   left: 0;
@@ -372,7 +375,15 @@
   -moz-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   -o-box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 .tlypageguide_welcome.open {
-  display: block;
+  filter: alpha(opacity=0);
+  -moz-opacity: 0.95;
+  -khtml-opacity: 0.95;
+  opacity: 0.95;
 }
