--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -392,7 +392,7 @@
         }
     }
 
-    .tlypageguide_welcome {
+    #tlyPageGuideWelcome {
         .pg-opacity(0);
         position: absolute;
         top: 0;
@@ -404,7 +404,7 @@
         margin: auto;
         max-width: 600px;
         height: 500px;
-        min-height: 500px;
+        max-height: 80%;
         background: #fff;
         padding: 15px 20px;
         overflow-y: scroll;
