copy & style tweaks to example modal

--- a/less/main.less
+++ b/less/main.less
@@ -156,3 +156,19 @@
         }
     }
 }
+
+#tlyPageGuideWelcome {
+    h3 {
+        color: #fff;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 2.5em;
+    }
+    .modal-button-container {
+        position: absolute;
+        bottom: 30px;
+        button {
+            font-size: 20px;
+        }
+    }
+}
