don't display messages on page load

--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -60,6 +60,9 @@
 
 /* Page Guide
 ================================================== */
+
+    #tlyPageGuide li div { display: none; }
+
     #tlyPageGuideWrapper {
         .pg-border-box;
         color: #000;
