--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -61,7 +61,7 @@
 /* Page Guide
 ================================================== */
 
-    #tlyPageGuide li div { display: none; }
+    //#tlyPageGuide li div { display: none; }
 
     #tlyPageGuideWrapper {
         .pg-border-box;
@@ -139,143 +139,143 @@
             }
         }
 
-        #tlyPageGuide {
-            list-style: none;
-            margin: 0 0 0 0;
-            padding: 0 0 0 0;
+        // #tlyPageGuide, #tlyPageGuideContent {
+        //     list-style: none;
+        //     margin: 0 0 0 0;
+        //     padding: 0 0 0 0;
 
-            li {
-                background: fade(@pg-highlight-color, 30%);
-                .pg-box-shadow(0, 2px, 10px, 1px, rgba(0, 0, 0, 0.4));
-                .pg-transition-animation(~"min-height, max-height", 0.1s, ease-in-out);
-                .pg-opacity(0);
-                cursor: pointer;
-                display: block;
-                height: 46px;
-                line-height: 50px;
-                min-height: 0px;
-                max-height: 0px;
-                position: absolute;
-                text-align: center;
-                width: 50px;
-                z-index: 5000;
+        //     li, .tlyPageGuideStepIndex {
+        //         background: fade(@pg-highlight-color, 30%);
+        //         .pg-box-shadow(0, 2px, 10px, 1px, rgba(0, 0, 0, 0.4));
+        //         .pg-transition-animation(~"min-height, max-height", 0.1s, ease-in-out);
+        //         .pg-opacity(0);
+        //         cursor: pointer;
+        //         display: block;
+        //         height: 46px;
+        //         line-height: 50px;
+        //         min-height: 0px;
+        //         max-height: 0px;
+        //         position: absolute;
+        //         text-align: center;
+        //         width: 50px;
+        //         z-index: 5000;
 
-                &.expanded {
-                    .pg-opacity(100);
-                    height:46px;
-                    min-height: 15px;
-                    max-height: 46px;
+        //         &.expanded {
+        //             .pg-opacity(100);
+        //             height:46px;
+        //             min-height: 15px;
+        //             max-height: 46px;
 
-                    &:after {
-                        display: block;
-                    }
-                }
+        //             &:after {
+        //                 display: block;
+        //             }
+        //         }
 
 
-                ins {
-                    background: none;
-                    color: #fff;
-                    display: block;
-                    font-size: 32px;
-                    overflow: hidden;
-                    text-decoration: none;
-                    width: 50px;
-                }
+        //         ins {
+        //             background: none;
+        //             color: #fff;
+        //             display: block;
+        //             font-size: 32px;
+        //             overflow: hidden;
+        //             text-decoration: none;
+        //             width: 50px;
+        //         }
 
-                div {
-                    display: none;
-                }
+        //         div {
+        //             display: none;
+        //         }
 
-                &:after {
-                    content: " ";
-                    display: none;
-                    height: 0;
-                    left: 0;
-                    position: absolute;
-                    top: -15px;
-                    width: 0;
-                    border-top: none;
-                    border-right: none;
-                    border-bottom: none;
-                    border-left: none;
-                    top: auto;
-                    left: auto;
-                    right: auto;
-                }
+        //         &:after {
+        //             content: " ";
+        //             display: none;
+        //             height: 0;
+        //             left: 0;
+        //             position: absolute;
+        //             top: -15px;
+        //             width: 0;
+        //             border-top: none;
+        //             border-right: none;
+        //             border-bottom: none;
+        //             border-left: none;
+        //             top: auto;
+        //             left: auto;
+        //             right: auto;
+        //         }
 
-                &.tlypageguide-active {
-                    background: fade(@pg-highlight-color, 95%);
+        //         &.tlypageguide-active {
+        //             background: fade(@pg-highlight-color, 95%);
 
-                    &.tlypageguide_bottom:after {
-                        border-bottom: 15px solid fade(@pg-highlight-color, 95%);
-                    }
+        //             &.tlypageguide_bottom:after {
+        //                 border-bottom: 15px solid fade(@pg-highlight-color, 95%);
+        //             }
 
-                    &.tlypageguide_right,
-                    &.tlypageguide_left,
-                    &.tlypageguide_top {
-                        &:after {
-                            border-top: 15px solid fade(@pg-highlight-color, 95%);
-                        }
-                    }
-                }
+        //             &.tlypageguide_right,
+        //             &.tlypageguide_left,
+        //             &.tlypageguide_top {
+        //                 &:after {
+        //                     border-top: 15px solid fade(@pg-highlight-color, 95%);
+        //                 }
+        //             }
+        //         }
 
-                &.tlypageguide_bottom {
-                    &:after {
-                        border-bottom: 15px solid fade(@pg-highlight-color, 30%);
-                        border-right: 15px solid transparent;
-                        left: 0;
-                        top: -15px;
-                    }
-                    &:hover { margin-top: -5px; }
-                }
+        //         &.tlypageguide_bottom {
+        //             &:after {
+        //                 border-bottom: 15px solid fade(@pg-highlight-color, 30%);
+        //                 border-right: 15px solid transparent;
+        //                 left: 0;
+        //                 top: -15px;
+        //             }
+        //             &:hover { margin-top: -5px; }
+        //         }
 
-                &.tlypageguide_right {
-                    &:after {
-                        border-top: 15px solid fade(@pg-highlight-color, 30%);
-                        border-left: 15px solid transparent;
-                        left: -15px;
-                        top: 0;
-                    }
-                    &:hover { margin-left: -5px; }
-                }
+        //         &.tlypageguide_right {
+        //             &:after {
+        //                 border-top: 15px solid fade(@pg-highlight-color, 30%);
+        //                 border-left: 15px solid transparent;
+        //                 left: -15px;
+        //                 top: 0;
+        //             }
+        //             &:hover { margin-left: -5px; }
+        //         }
 
-                &.tlypageguide_left {
-                    &:after {
-                        border-top: 15px solid fade(@pg-highlight-color, 30%);
-                        border-right: 15px solid transparent;
-                        right: -15px;
-                        top: 0;
-                    }
-                    &:hover { margin-left: 5px; }
-                }
+        //         &.tlypageguide_left {
+        //             &:after {
+        //                 border-top: 15px solid fade(@pg-highlight-color, 30%);
+        //                 border-right: 15px solid transparent;
+        //                 right: -15px;
+        //                 top: 0;
+        //             }
+        //             &:hover { margin-left: 5px; }
+        //         }
 
-                &.tlypageguide_top {
-                    &:after {
-                        border-top: 15px solid fade(@pg-highlight-color, 30%);
-                        border-right: 15px solid transparent;
-                        bottom: -15px;
-                        left: 0;
-                    }
-                    &:hover { margin-top: 5px; }
-                }
+        //         &.tlypageguide_top {
+        //             &:after {
+        //                 border-top: 15px solid fade(@pg-highlight-color, 30%);
+        //                 border-right: 15px solid transparent;
+        //                 bottom: -15px;
+        //                 left: 0;
+        //             }
+        //             &:hover { margin-top: 5px; }
+        //         }
 
-                &:hover {
-                    background: fade(@pg-highlight-color, 95%);
+        //         &:hover {
+        //             background: fade(@pg-highlight-color, 95%);
 
-                    &.tlypageguide_bottom:after {
-                        border-bottom: 15px solid fade(@pg-highlight-color, 95%);
-                    }
+        //             &.tlypageguide_bottom:after {
+        //                 border-bottom: 15px solid fade(@pg-highlight-color, 95%);
+        //             }
 
-                    &.tlypageguide_right,
-                    &.tlypageguide_left,
-                    &.tlypageguide_top {
-                        &:after {
-                            border-top: 15px solid fade(@pg-highlight-color, 95%);
-                        }
-                    }
-                }
-            }
-        }
+        //             &.tlypageguide_right,
+        //             &.tlypageguide_left,
+        //             &.tlypageguide_top {
+        //                 &:after {
+        //                     border-top: 15px solid fade(@pg-highlight-color, 95%);
+        //                 }
+        //             }
+        //         }
+        //     }
+        // }
 
         #tlyPageGuideMessages {
             .pg-rounded-corners(3px 3px 0 0);
@@ -357,19 +357,19 @@
         }
     }
 
-    .tlypageguide_shadow {
-        position: relative;
+    // .tlypageguide_shadow {
+    //     position: relative;
 
-        &:after {
-            background-color: fade(@pg-highlight-color, 10%);
-            .pg-box-shadow(0, 0, 1px, 1px, rgba(147, 0, 119, 0.25));
-            content: " ";
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-    }
+    //     &:after {
+    //         background-color: fade(@pg-highlight-color, 10%);
+    //         .pg-box-shadow(0, 0, 1px, 1px, rgba(147, 0, 119, 0.25));
+    //         content: " ";
+    //         display: none;
+    //         position: absolute;
+    //         top: 0;
+    //         left: 0;
+    //     }
+    // }
 
     .tlypageguide-open {
 
@@ -391,9 +391,9 @@
             }
         }
 
-        .tlypageguide_shadow:after {
-            display: block;
-        }
+        // .tlypageguide_shadow:after {
+        //     display: block;
+        // }
     }
 
     #tlyPageGuideWelcome {
@@ -458,3 +458,161 @@
             display: block;
         }
     }
+
+    // NEW
+
+    .tlypageguide_TESTshadow {
+        position: absolute;
+        //background: fade(@pg-highlight-color, 25%);
+        display: none;
+        //&:after {
+            background-color: fade(@pg-highlight-color, 10%);
+            .pg-box-shadow(0, 0, 1px, 1px, rgba(147, 0, 119, 0.25));
+            //content: " ";
+            //display: none;
+            //position: absolute;
+            //top: 0;
+            //left: 0;
+        //}
+    }
+
+    .tlyPageGuideStepIndex {
+        background: fade(@pg-highlight-color, 30%);
+        .pg-box-shadow(0, 2px, 10px, 1px, rgba(0, 0, 0, 0.4));
+        .pg-transition-animation(~"min-height, max-height", 0.1s, ease-in-out);
+        //.pg-opacity(0);
+        cursor: pointer;
+        display: block;
+        height: 46px;
+        line-height: 50px;
+        min-height: 0px;
+        max-height: 0px;
+        position: absolute;
+        text-align: center;
+        width: 50px;
+        z-index: 5000;
+
+        //&.expanded {
+            .pg-opacity(100);
+            height:46px;
+            min-height: 15px;
+            max-height: 46px;
+
+            // &:after {
+            //     display: block;
+            // }
+        //}
+
+
+        //ins {
+        //    background: none;
+            color: #fff;
+        //    display: block;
+            font-size: 32px;
+        //    overflow: hidden;
+            text-decoration: none;
+            width: 50px;
+        //}
+
+        // div {
+        //     display: none;
+        // }
+
+        &:after {
+            content: " ";
+            display: block;
+            height: 0;
+            left: 0;
+            position: absolute;
+            top: -15px;
+            width: 0;
+            border-top: none;
+            border-right: none;
+            border-bottom: none;
+            border-left: none;
+            top: auto;
+            left: auto;
+            right: auto;
+        }
+
+        &.tlypageguide_bottom {
+            bottom: -65px;
+            &:after {
+                border-bottom: 15px solid fade(@pg-highlight-color, 30%);
+                border-right: 15px solid transparent;
+                left: 0;
+                top: -15px;
+            }
+            &:hover { margin-top: -5px; }
+        }
+
+        &.tlypageguide_right {
+            right: -65px;
+            &:after {
+                border-top: 15px solid fade(@pg-highlight-color, 30%);
+                border-left: 15px solid transparent;
+                left: -15px;
+                top: 0;
+            }
+            &:hover { margin-left: -5px; }
+        }
+
+        &.tlypageguide_left {
+            left: -65px;
+            &:after {
+                border-top: 15px solid fade(@pg-highlight-color, 30%);
+                border-right: 15px solid transparent;
+                right: -15px;
+                top: 0;
+            }
+            &:hover { margin-left: 5px; }
+        }
+
+        &.tlypageguide_top {
+            top: -60px;
+            &:after {
+                border-top: 15px solid fade(@pg-highlight-color, 30%);
+                border-right: 15px solid transparent;
+                bottom: -15px;
+                left: 0;
+            }
+            &:hover { margin-top: 5px; }
+        }
+
+        &:hover {
+            background: fade(@pg-highlight-color, 95%);
+
+            &.tlypageguide_bottom:after {
+                border-bottom: 15px solid fade(@pg-highlight-color, 95%);
+            }
+
+            &.tlypageguide_right,
+            &.tlypageguide_left,
+            &.tlypageguide_top {
+                &:after {
+                    border-top: 15px solid fade(@pg-highlight-color, 95%);
+                }
+            }
+        }
+    }
+
+    .tlypageguide-active {
+
+        // highlight the index bubble
+        .tlyPageGuideStepIndex {
+            background: fade(@pg-highlight-color, 95%);
+
+            &.tlypageguide_bottom:after {
+                border-bottom: 15px solid fade(@pg-highlight-color, 95%);
+            }
+
+            &.tlypageguide_right,
+            &.tlypageguide_left,
+            &.tlypageguide_top {
+                &:after {
+                    border-top: 15px solid fade(@pg-highlight-color, 95%);
+                }
+            }
+        }
+    }
+
