--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -312,6 +312,7 @@
         display: none;
         background-color: fade(@pg-highlight-color, 10%);
         .pg-box-shadow(0, 0, 1px, 1px, rgba(147, 0, 119, 0.25));
+        pointer-events: none;
     }
 
     .tlyPageGuideStepIndex {
