[idempotence] dedupe forward & back events for multiple pageguides, fix bubble click

--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -333,7 +333,7 @@
         .pg-opacity(100);
         min-height: 15px;
         max-height: 46px;
-
+        pointer-events: all;
         color: #fff;
         font-size: 32px;
         text-decoration: none;
