[idempotence] add position refresh timer. :airplane:

--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -173,7 +173,7 @@
                 width: 50px;
             }
 
-            div {
+            .tlypageguide_text {
                 color: #fff;
                 line-height: 22px;
                 margin: 10px 90px 0 120px;
@@ -436,4 +436,3 @@
             }
         }
     }
-
