--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -251,7 +251,7 @@
         }
     }
 
-    #tlyPageGuideWelcome {
+    .tlyPageGuideWelcome, #tlyPageGuideWelcome {
         display: none;
         .pg-opacity(0);
         position: absolute;
@@ -304,7 +304,7 @@
     }
 
     .tlyPageGuideWelcomeOpen {
-        #tlyPageGuideWelcome {
+        .tlyPageGuideWelcome, #tlyPageGuideWelcome {
             .pg-opacity(95);
             display: block;
         }
