Extract text color from style.default.less Make the colors in color.default.less be used if not overridden in specific color.*.less files Add color.inverse.less, a horrid color scheme but it shows changing the text color

--- a/less/color.default.less
+++ b/less/color.default.less
@@ -2,5 +2,14 @@
 ================================================== */
 
 @pg-highlight-color: rgb(247, 0, 119);
+@pg-highlight-color-text: rgb(255, 255, 255);
+
 @pg-shadow-color: rgba(147, 0, 119, 0.25);
+
 @pg-base-color: rgb(0, 0, 0);
+@pg-base-color-text: rgb(255, 255, 255);
+
+@pg-closed-color: fade(@pg-base-color, 10%);
+@pg-closed-color-text: rgb(0, 0, 0);
+@pg-closed-color-page-text: rgb(0, 0, 0);
+
